--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="フィルタリングやセキュリティなどの制限はもう考えなくていい。そうYohohoなら。無料で今この瞬間に見たいマンガを。">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="robots" content="nofollow,noindex,noarchive" />
-        <link rel="stylesheet" href="/mangayohoho.io/css/mangayohoho.css">
+        <link rel="stylesheet" href="/css/mangayohoho.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="icon" href="/favicon/favicon.ico">
         <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
@@ -43,9 +43,9 @@
             <div>
                 <a href="javascript:void(0)" onclick="getElementById('hambergerMenu').style.display = 'none';"><i class="fa-solid fa-xmark"></i></a>
             </div>
-            <div><a href="menu/new"><i class="fa-solid fa-fire"></i> New</a></div>
-            <div><a href="menu/all"><i class="fa-solid fa-book"></i> All</a></div>
-            <div><a href="menu/request"><i class="fa-solid fa-question"></i> Request</a></div>
+            <div><a href="/menu/new"><i class="fa-solid fa-fire"></i> New</a></div>
+            <div><a href="/menu/all"><i class="fa-solid fa-book"></i> All</a></div>
+            <div><a href="/menu/request"><i class="fa-solid fa-question"></i> Request</a></div>
             <div><a href="javascript:void(0)" onclick="getElementById('searchBox').style.display = 'block';"><i class="fa-solid fa-magnifying-glass"></i> Search</a></div>
         </div>
         
