--- a/menu/new.html
+++ b/menu/new.html
@@ -25,7 +25,7 @@
         <div class="indexBox">
             <div class="index">
                 <div class="imgBox">
-                    <a href="/n00001/p00001/n00001.html">
+                    <a href="/n00001/p00001/n00001">
                         <img src="/n00001/n00001-1-h.webp" class="img">
                     </a>
                 </div>
@@ -35,12 +35,12 @@
             </div>
             <div class="index">
                 <div class="imgBox">
-                    <a href="/p00002/n00002.html">
-                        <img src="/n00002/n00002-h.webp" class="img">
+                    <a href="/n00021/p00021/n00021">
+                        <img src="/n00021/n00021-h.webp" class="img">
                     </a>
                 </div>
                 <div class="indexTitle">
-                    <a href="/p00002/n00002.html" class="it">東京卍リベンジャーズ</a>
+                    <a href="/p00021/n00021.html" class="it">チェンソーマン</a>
                 </div>
             </div>
             <div class="index">
