--- a/menu/all.html
+++ b/menu/all.html
@@ -79,12 +79,12 @@
                   <div class="indexp"><a href="">SPY×FAMILY</a></div>
                   <div class="indexp"><a href="">ザ・ファブル</a></div>
                   <div class="indexp"><a href="">十字架のろくにん</a></div>
-                  <div class="indexp"><a href="/n00001/p00001/n00001.html">呪術廻戦</a></div>
+                  <div class="indexp"><a href="/n00001/p00001/n00001">呪術廻戦</a></div>
                   <button class="hideBtn" onclick="document.getElementById('bar3').style.display = 'none';">リストを非表示</button>
               </div>
               <div class="bar"><a onclick="document.getElementById('bar4').style.display = 'block';">た行</a></div>
               <div id="bar4" class="hide">
-                  <div class="indexp"><a href="">チェンソーマン</a></div>
+                  <div class="indexp"><a href="/n00021/p00021/n00021">チェンソーマン</a></div>
                   <div class="indexp"><a href="">東京卍リベンジャーズ</a></div>
                   <div class="indexp"><a href="">ドクターストーン</a></div>
                   <button class="hideBtn" onclick="document.getElementById('bar4').style.display = 'none';">リストを非表示</button>
@@ -103,7 +103,7 @@
                   <div class="indexp"><a href="">HUNTER×HUNTER</a></div>
                   <div class="indexp"><a href="">ブラッククローバー</a></div>
                   <div class="indexp"><a href="">ブルーロック</a></div>
-                  <div class="indexp"><a href="">僕のヒーローアカデミア</a></div>
+                  <div class="indexp"><a href="/n00003/p00003/n00003">僕のヒーローアカデミア</a></div>
                   <button class="hideBtn" onclick="document.getElementById('bar6').style.display = 'none';">リストを非表示</button>
               </div>
     
