--- a/menu/new.html
+++ b/menu/new.html
@@ -30,7 +30,7 @@
                     </a>
                 </div>
                 <div class="indexTitle">
-                    <a href="/n00001/p00001/n00001.html" class="it">呪術廻戦</a>
+                    <a href="/n00001/p00001/n00001" class="it">呪術廻戦</a>
                 </div>
             </div>
             <div class="index">
@@ -40,17 +40,17 @@
                     </a>
                 </div>
                 <div class="indexTitle">
-                    <a href="/p00021/n00021.html" class="it">チェンソーマン</a>
+                    <a href="/n00021/p00021/n00021" class="it">チェンソーマン</a>
                 </div>
             </div>
             <div class="index">
                 <div class="imgBox">
-                    <a href="/p00003/n00003.html">
+                    <a href="/n00003/p00003/n00003">
                         <img src="/n00003/n00003-h.webp" class="img">
                     </a>
                 </div>
                 <div class="indexTitle">
-                    <a href="/p00003/n00003.html" class="it">僕のヒーローアカデミア</a>
+                    <a href="/n00003/p00003/n00003" class="it">僕のヒーローアカデミア</a>
                 </div>
             </div>
             <div class="index">
