--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -73,7 +73,7 @@
                 <a class="infoTitle">このサイトについて</a>
             </div>
             <div class="info">
-                <a class="infos">マンガは準備中です。完成までお待ちください。掲載予定以外の作品を読みたい場合は上部メニューバーのリクエストから作品名の送信をお願いします。<br>
+                <a class="infos">マンガは準備中です。準備中なんだけどちょっと色々あって更新に飽きて何もしたくない感じなんです。もうちょっと待ったら僕の中のよほほが再熱すると思うよ。<br>
                 </a><button class="infos" id="infos" onclick="document.getElementById('hide').style.display = 'block';">掲載予定はこちら</a>
             </div>
             <div id="hide">
